; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/resowner/extr_resowner.c_CreateAuxProcessResourceOwner.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/resowner/extr_resowner.c_CreateAuxProcessResourceOwner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AuxProcessResourceOwner = common dso_local global i32* null, align 8
@CurrentResourceOwner = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [17 x i8] c"AuxiliaryProcess\00", align 1
@ReleaseAuxProcessResourcesCallback = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CreateAuxProcessResourceOwner() #0 {
  %1 = load i32*, i32** @AuxProcessResourceOwner, align 8
  %2 = icmp eq i32* %1, null
  %3 = zext i1 %2 to i32
  %4 = call i32 @Assert(i32 %3)
  %5 = load i32*, i32** @CurrentResourceOwner, align 8
  %6 = icmp eq i32* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @Assert(i32 %7)
  %9 = call i32* @ResourceOwnerCreate(i32* null, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  store i32* %9, i32** @AuxProcessResourceOwner, align 8
  %10 = load i32*, i32** @AuxProcessResourceOwner, align 8
  store i32* %10, i32** @CurrentResourceOwner, align 8
  %11 = load i32, i32* @ReleaseAuxProcessResourcesCallback, align 4
  %12 = call i32 @on_shmem_exit(i32 %11, i32 0)
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32* @ResourceOwnerCreate(i32*, i8*) #1

declare dso_local i32 @on_shmem_exit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
